...
      { latitude: 45.4588359, longitude: -73.6382599 },
      { latitude: 45.4590522, longitude: -73.6388647 },
    ],
  },
  {
    name: "B",
    campusName: "SGW",
    displayName: "B Annex (B)",
    address: "2160 Bishop St, Montreal, Quebec H3G 2E9",
    coordinates: {
      latitude: 45.497818,
      longitude: -73.579524,
    },
...
      { latitude: 45.496603, longitude: -73.581067 },
    ],
  },
  {
    name: "H",
    campusName: "SGW",
    displayName: "Henry F. Hall Building (H)",
    address: "1455 Blvd. De Maisonneuve Ouest, Montreal, Quebec H3G 1M8",
    coordinates: {
      latitude: 45.497256,
      longitude: -73.578915,
    },
    icons: ["information", "printer", "bike", "wheelchair"],
    departments: [
      "Economics",
      "Geography, Planning and Environment",
      "Political Science",
      "School of Community and Public Affairs",
      "School of Irish Studies",
      "Sociology and Anthropology",
    ],
    services: [
      "Campus Safety and Prevention Services",
      "Concordia Student Union (CSU)",
      "First Stop",
      "Espace Franco",
      "IT Service Desk",
      "NouLa Black Student Centre",
      "Office of Student Life and Engagement",
      "Otsenhákta Student Centre",
      "Sexual Assault Resource Centre (SARC)",
      "Student Success Centre",
      "Welcome Crew Office",
...
